<resources>
    <string name="app_name">AlcoholSafe</string>
    <string name="start">START</string>
    <string name="intro">알코올세이프는\n여러분의 건강한 음주생활을 응원합니다 :)</string>
    <string name="gender">성별</string>
    <string name="drinkAlcohol">섭취 주류</string>
    <string name="calculate">계산하기</string>
    <string name="lastTIme">마지막 음주 시간</string>
    <string name="lastTime">마지막 음주 시간</string>
    <string name="weight">몸무게</string>
    <string name="percent">%</string>
    <string name="kg">kg</string>
    <string name="back">↩︎</string>
</resources>